# Embedded-Linux

./: README.md
AdminLinux_Task1/: Script.sh
AdminLinux_Task2/: README.md
AdminLinux_Task3/: README.md  Script.sh
AdminLinux_Task3/Section_2_(Na2na2a)/: README.md
AdminLinux_Task4/: README.md  script.sh
AdminLinux_Task4/Na2na2a/: README.md
AdminLinux_Task5/: README.md
AdminLinux_Tasks/AdminLinux_Task2/: binary  binary.c
AdminLinux_Tasks/AdminLinux_Task3/: README.md
AdminLinux_Tasks/AdminLinux_Task4/: README.md
AdminLinux_Tasks/AdminLinux_Task5/: README.md
EmbeddedLinux_Task1/: README.md  static_dump.txt
EmbeddedLinux_Task1/dynamic/: dynamic_dump.txt  multiply.c
EmbeddedLinux_Task2/: README.md
EmbeddedLinux_Task3/: README.md
EmbeddedLinux_Task4/: README.md
EmbeddedLinux_Task4/Driver/: PORT_Config.c  main.elf
EmbeddedLinux_Task5/: CMakeLists.txt  README.md  add.c  main.c
EmbeddedLinux_Task5/includes/: multiply.h
EmbeddedLinux_Task6/: README.md
EmbeddedLinux_Task7/: README.md
EmbeddedLinux_Task8/: README.md
EmbeddedLinux_Tasks/EmbeddedLinux_Task1/: README.md  main
EmbeddedLinux_Tasks/EmbeddedLinux_Task10/: README.md
EmbeddedLinux_Tasks/EmbeddedLinux_Task11/: README.md
EmbeddedLinux_Tasks/EmbeddedLinux_Task12_(Yocto-recipe)/: README.md
EmbeddedLinux_Tasks/EmbeddedLinux_Task2/: README.md
EmbeddedLinux_Tasks/EmbeddedLinux_Task3/: README.md
EmbeddedLinux_Tasks/EmbeddedLinux_Task4/: README.md
EmbeddedLinux_Tasks/EmbeddedLinux_Task5/: README.md  main.c
Quiz_1/: README.md  config.ini  config_parser.sh
(+27 files in other folders)
